# timerollstat

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
tests/: d.py  test_performance.py  test_rolling_average_t.py  test_rolling_median.py  test_rolling_median_t.py  test_rolling_quantile copy.py  test_rolling_quantile_t.py
timerollstat/: __init__.py  core.py  rolling_simple.py
